# starly-info.github.io

./: README.md  about.html  about.rst  index.html  privacy.html  privacy.rst  sitemap.xml  starly.cabal  subscribe-free.html  subscribe-pro.html  subscribe.html  tos.html  tos.rst
course/en/: 2017-08-18-vim.html  2017-08-18-vim.rst
newsletter/en/: 2017-08-18-vim.html  2017-08-18-vim.rst
slide/: linux-day-2017.html  vimberlin.html
src/: Config.hs  Multilang.hs  site.hs
static/: example.html
static/css/: turretcss.min.css
templates/: default.html  mailchimp.html  payments.html  post-list.html
templates/en/: archive.html  donation.html  post.html
templates/it/: archive.html
