name:               starly
version:            0.1.0.0
synopsis:           Big wins come from little things
description:        Read manuals one step at a time, through our learning sessions
homepage:           http://starly.info
license:            AllRightsReserved
author:             Giacomo Mantani
maintainer:         giacomo.mantani@gmail.com
copyright:          Giacomo Mantani
category:           Web
build-type:         Simple
cabal-version:      >= 1.10
source-repository head
  type: git
  location: git@github.com:starly-info/starly-info.github.io.git

executable starly
  main-is:          site.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -threaded -Wall
  other-modules:    Abbreviations
                    , Config
                    , Multilang
                    , JFilters
  build-depends:    base == 4.*
                  , containers
                  , filepath
                  , hakyll == 4.9.*
                  , pandoc
                  , old-locale
